Allow specifying a local IPSW file (#298)